# gst-plugins-ugly

./: AUTHORS  LICENSE_readme  configure.ac
ext/: Makefile.am
ext/siddecfp/: Makefile.am  gstsiddecfp.cpp  gstsiddecfp.h
